modified:   index.html

--- a/index.html
+++ b/index.html
@@ -38,7 +38,66 @@
     </div>
     <h2 class="text-3xl font-bold mb-8 text-green-400 text-center">Skills</h2>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-      <!-- (same skills content as before) -->
+      <!-- Frontend -->
+      <div class="bg-gray-800 p-6 rounded-xl hover:shadow-xl hover:shadow-green-500/30 transition">
+        <h3 class="font-semibold text-lg mb-3 text-green-300">Front-end Development</h3>
+        <ul class="list-disc pl-5 space-y-1">
+          <li>HTML5, CSS3, JavaScript (ES6+), TypeScript (basic)</li>
+          <li>React.js, Next.js, Tailwind CSS, Bootstrap</li>
+          <li>Responsive Web Design (Mobile-First)</li>
+          <li>Basic UI/UX Design Principles</li>
+        </ul>
+      </div>
+
+      <!-- Backend -->
+      <div class="bg-gray-800 p-6 rounded-xl hover:shadow-xl hover:shadow-green-500/30 transition">
+        <h3 class="font-semibold text-lg mb-3 text-green-300">Back-end Development</h3>
+        <ul class="list-disc pl-5 space-y-1">
+          <li>Node.js, Express.js</li>
+          <li>RESTful API Development</li>
+          <li>Authentication & Authorization (JWT, OAuth)</li>
+          <li>MVC Architecture, Middleware</li>
+          <li>File Uploads (Multer, Cloudinary)</li>
+          <li>WebSockets (Socket.IO)</li>
+        </ul>
+      </div>
+
+      <!-- Databases -->
+      <div class="bg-gray-800 p-6 rounded-xl hover:shadow-xl hover:shadow-green-500/30 transition">
+        <h3 class="font-semibold text-lg mb-3 text-green-300">Databases</h3>
+        <ul class="list-disc pl-5 space-y-1">
+          <li>Convex Database</li>
+          <li>PostgreSQL, MongoDB</li>
+          <li>Firebase (basic)</li>
+          <li>Prisma ORM (basic), SQL (basic)</li>
+        </ul>
+      </div>
+
+      <!-- Tools -->
+      <div class="bg-gray-800 p-6 rounded-xl hover:shadow-xl hover:shadow-green-500/30 transition">
+        <h3 class="font-semibold text-lg mb-3 text-green-300">Tools & Platforms</h3>
+        <ul class="list-disc pl-5 space-y-1">
+          <li>Git, GitHub</li>
+          <li>npm, Yarn</li>
+          <li>VS Code, Linux Command Line</li>
+          <li>Docker (basic concepts)</li>
+          <li>Figma, Canva</li>
+        </ul>
+      </div>
+
+      <!-- Other Skills -->
+      <div class="bg-gray-800 p-6 rounded-xl hover:shadow-xl hover:shadow-green-500/30 transition">
+        <h3 class="font-semibold text-lg mb-3 text-green-300">Other Skills</h3>
+        <ul class="list-disc pl-5 space-y-1">
+          <li>Problem-Solving & Debugging</li>
+          <li>Working with APIs (Axios, Fetch)</li>
+          <li>Deployment & Hosting</li>
+          <li>Basic Testing</li>
+          <li>Agile Development (Scrum basics)</li>
+          <li>AI APIs & Integration (OpenAI, Replicate, Hugging Face)</li>
+          <li>Design Thinking & MVP Development</li>
+        </ul>
+      </div>
     </div>
   </section>
 
@@ -46,7 +105,12 @@
   <section class="max-w-4xl mx-auto py-12 px-6">
     <h2 class="text-2xl font-bold mb-6 text-green-400">Certifications & Projects</h2>
     <ul class="list-disc pl-5 space-y-2">
-      <!-- (certification links as before) -->
+      <li><a href="https://www.freecodecamp.org/certification/hoorad/responsive-web-design" class="text-green-400 underline" target="_blank">Responsive Web Design - freeCodeCamp</a></li>
+      <li><a href="https://www.freecodecamp.org/certification/hoorad/data-visualization" class="text-green-400 underline" target="_blank">Data Visualization - freeCodeCamp</a></li>
+      <li><a href="https://www.freecodecamp.org/certification/hoorad/javascript-algorithms-and-data-structures-v8" class="text-green-400 underline" target="_blank">JavaScript Algorithms & Data Structures - freeCodeCamp</a></li>
+      <li><a href="https://www.freecodecamp.org/certification/hoorad/front-end-development-libraries" class="text-green-400 underline" target="_blank">Front End Development Libraries - freeCodeCamp</a></li>
+      <li><a href="https://www.freecodecamp.org/certification/hoorad/scientific-computing-with-python-v7" class="text-green-400 underline" target="_blank">Scientific Computing with Python - freeCodeCamp</a></li>
+      <li><a href="https://pixel-bloom-design.vercel.app/" class="text-green-400 underline" target="_blank">Project: Pixel Bloom Design</a> | <a href="https://github.com/hoorad-boop/PixelBloom" class="text-green-400 underline" target="_blank">Source Code</a></li>
     </ul>
   </section>
 
