--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hoorad Nazari - Portfolio</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="three.min.js"></script>
+  <script src="https://unpkg.com/three@0.148.0/build/three.min.js"></script>
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-gray-950 text-gray-200 font-sans">
