--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hoorad Nazari - Portfolio</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="three.min.js"></script>
+  <script src="https://unpkg.com/three@0.148.0/build/three.min.js"></script>
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-gray-950 text-gray-200 font-sans">
@@ -22,9 +22,6 @@
 
   <!-- Summary -->
   <section class="relative max-w-4xl mx-auto py-12 px-6">
-    <div class="absolute right-0 top-1/2 transform -translate-y-1/2 w-64 h-64 opacity-40 pointer-events-none">
-      <canvas id="summary-canvas" class="w-full h-full"></canvas>
-    </div>
     <h2 class="text-2xl font-bold mb-4 text-green-400">Professional Summary</h2>
     <p class="leading-relaxed">
       Web development enthusiast learning by building real projects. I enjoy turning ideas into functional websites and always look for new challenges to level up my skills. Excited to keep growing and contribute to creative teams.
@@ -33,7 +30,7 @@
 
   <!-- Skills -->
   <section class="bg-gray-900 shadow-md rounded-2xl max-w-5xl mx-auto p-10 mb-12 relative">
-    <div class="absolute left-0 top-10 w-40 h-40 opacity-30 pointer-events-none">
+    <div class="absolute left-0 top-0 w-40 h-40 opacity-30 pointer-events-none">
       <canvas id="skills-canvas" class="w-full h-full"></canvas>
     </div>
     <h2 class="text-3xl font-bold mb-8 text-green-400 text-center">Skills</h2>
